# pyta-trader

./: .gitignore  .sample.env  LICENSE  README.md  candlestick.py  demo.py  live_plot.py  main.py  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.py
demo/: candlestick_demo.py  live_macd_chart.py  normal_demo.py
docs/: Chart.md  Index.md  chart_explained.md  trading_terms.md  usage.md
docs/modules/calculations/: smoothings.md
docs/modules/indicators/: Indicator.md  MACDIndicator.md
docs/modules/infras/: mt5_manager.md
docs/modules/models/: Price.md
docs/modules/strategy/: price.md
native/cpp/: __init__.py  binding.cpp  setup.py  smoothings.cpp  test_smoothing.py
pyta/: smoothing_cpp.pyi
pyta/calculations/: smoothings.py
pyta/chart/: central_draw.py  chart.py
pyta/config/: base.py
pyta/excep/indicators/: line_not_supported.py
pyta/indicator/: base.py  macd.py  rsi.py
pyta/strategy/price/: base.py  close.py
pyta_trader/chart/: chart.py
pyta_trader/config/: loader.py
pyta_trader/excep/envs/: missing_keys.py
pyta_trader/indicator/: base.py  macd.py
pyta_trader/models/: price.py
pyta_trader/strategy/price/: base.py  close.py
src/: __init__.py  config.py
src/calculations/: __init__.py  smoothings.py
src/chart/: central_draw.py  chart.py
src/components/exchange/: chart.py
src/config/: dev.py  loader.py  prod.py
src/exceptions/: __init__.py
src/indicator/: base.py  calculate.py  macd.py  rsi.py
src/infras/: __init__.py  mt5_manager.py
src/pyta_trader/: __init__.py
src/pyta_trader/calculations/: smoothings.py
src/pyta_trader/chart/: chart.py
src/pyta_trader/config/: __init__.py
src/pyta_trader/excep/: __init__.py
src/pyta_trader/excep/envs/: missing_keys.py
src/pyta_trader/indicator/: base.py  macd.py
src/pyta_trader/signals/: macd_conditions.py
src/pyta_trader/strategy/price/: close.py  ha_close.py
src/signals/: macd_conditions.py
test/: test_rsi.py
tests/: macd_condition_test.py  test_smoothing.py
tests/native/cpp/: test_smoothing.py
tests/src/indicators/: test_ema.py  test_ema_sma.py  test_macd.py  test_rsi.py  test_sma.py
