[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyta-trader"
version = "0.1.0"
description = "A Python-based trading framework integrating with MetaTrader 5 (MT5)."
readme = "README.md"
authors = [
  { name = "Lê Cường", email = "cuongdayne17@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
  "MetaTrader5>=5.0",
  "pandas>=1.3",
  "numpy>=1.21",
  "matplotlib>=3.4",
  "python-dotenv>=0.19"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
